--- a/rhel-ssh-pod.yaml
+++ b/rhel-ssh-pod.yaml
@@ -2,10 +2,16 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: rhel-ssh-pod
+  labels:
+    app: rhel
 spec:
   containers:
     - name: rhel
       image: registry.access.redhat.com/ubi9/ubi:latest
+      ports:
+        - containerPort: 22
+          name: ssh
+          protocol: TCP
       command: ["/bin/bash"]
       args:
         - -c
@@ -15,5 +21,29 @@ spec:
           sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && \
           echo "root:Asdf_123" | chpasswd && \
           /usr/sbin/sshd -D
+    - name: node-exporter
+      image: prom/node-exporter:latest
       ports:
-        - containerPort: 22
+        - containerPort: 9100
+          name: metrics
+          protocol: TCP
+      securityContext:
+        privileged: true
+      volumeMounts:
+        - name: proc
+          mountPath: /host/proc
+          readOnly: true
+        - name: sys
+          mountPath: /host/sys
+          readOnly: true
+      args:
+        - "--path.procfs=/host/proc"
+        - "--path.sysfs=/host/sys"
+        - "--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)"
+  volumes:
+    - name: proc
+      hostPath:
+        path: /proc
+    - name: sys
+      hostPath:
+        path: /sys
